<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="#caeb5e"
    android:padding="40dp">


    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_margin="20dp"
        android:layout_marginTop="30dp"
        android:hint="@string/email"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:textSize="20sp"
         />

    <EditText
        android:id="@+id/userName"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_margin="20dp"
        android:layout_marginTop="20dp"
        android:hint="@string/user_name"
        android:ems="10"
        android:inputType="textPersonName"
        android:textSize="20sp"
         />

    <EditText
        android:id="@+id/nickName"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_margin="20dp"
        android:layout_marginTop="20dp"
        android:hint="@string/nick_name"
        android:ems="10"
        android:inputType="textPersonName"
        android:textSize="20sp"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnlogin"
        android:text="@string/sign_in"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:background="#33cc5a"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/newuser"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_margin="40dp"
        android:layout_marginTop="15dp"
        android:text="@string/new_user"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textColor="#000"
        android:textStyle="bold"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnsignup"
        android:text="@string/sign_up"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="#33cc5a"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnback"
        android:text="@string/back"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:background="#33cc5a"
        android:textSize="20sp"
        android:textStyle="bold"/>

</LinearLayout>